--- a/vacinacao-frontend/src/index.css
+++ b/vacinacao-frontend/src/index.css
@@ -1,13 +1,24 @@
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  padding-bottom: 60px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #E5E5E5;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: #168F9E;
+}
+nav {
+  background-color: #168F9E;
 }
