--- a/vacinacao-frontend/src/pages/Login/style.css
+++ b/vacinacao-frontend/src/pages/Login/style.css
@@ -1,31 +1,44 @@
+
+.link-cadastro{
+    margin-top: 20px;
+    color:white;
+}
+
 .container-login {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    margin-top: 100px;
+    margin-top: 50px;
     
 }
+
+h1.home{
+    text-shadow: white 0.1em 0.1em 0.2em;
+    color:white;
+}
+
 h1.login { 
     width: 40%;
-    background-color: #168F9E;
+    background-color: #057FB7;
     height: 80px;
     margin-bottom: 0px;
+    margin-top: 20px;
 }
 .form-login {
     margin-top: -5px;
-    width: 40%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 300px;
-    background-color: #168F9E;
+    height: 400px;
+    background-color: #057FB7;
+    border-radius: 20px;
 }
 
 .input-login {
-    width: 400px;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    width: 300px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .btn-login {
