Update List vacinação e update no service

--- a/vacinacao-frontend/src/pages/Vacinacao/Update/style.css
+++ b/vacinacao-frontend/src/pages/Vacinacao/Update/style.css
@@ -4,7 +4,7 @@
     align-items: center;
 }
 
-.form-group {
+.atualizar-vacinacao .form-group {
     display: flex;
     vertical-align: text-bottom;
 }
